add more logic, sql file for email constraint and Dao service is now fully tested